Ashutosh (#5)
* restructed model class

* restructed dto classes

* modified service interface

* added new custom methods

* added enum and exception packages